src/snapshots/bl__tests__snapshots__cmd_is__actionable.snap
---
source: src/tests.rs
expression: render_command_help(&refs)
---
Check actionability of an element (Visible, Stable, ReceivesEvents, Enabled, Editable)

Usage: bl is actionable [OPTIONS] <url> <selector>

Arguments:
  <url>       URL to navigate to before checking
  <selector>  CSS selector of the element to check

Options:
      --headless  Hide browser window (visible by default)
  -v, --verbose   Enable debug logging
      --json      Output as JSON
  -h, --help      Print help

Examples:
  bl is actionable https://example.com "a"
  # Output:
  # Checking actionability for selector: a
  # ✓ Visible: true
  # ✓ Stable: true
  # ✓ ReceivesEvents: true
  # ✓ Enabled: true
  # ✗ Editable: false
