src/snapshots/bl__tests__snapshots__cmd_is__checked.snap
---
source: src/tests.rs
expression: render_command_help(&refs)
---
Check if a checkbox or radio is checked

Usage: bl is checked [OPTIONS] <selector>

Arguments:
  <selector>  CSS selector of the checkbox or radio to check

Options:
      --headless  Hide browser window (visible by default)
  -v, --verbose   Enable debug logging
      --json      Output as JSON
  -h, --help      Print help

Examples:
  bl is checked "input[type=checkbox]"
  # Prints true or false
