src/snapshots/bl__tests__snapshots__cmd_is__enabled.snap
---
source: src/tests.rs
expression: render_command_help(&refs)
---
Check if an element is enabled

Usage: bl is enabled [OPTIONS] <selector>

Arguments:
  <selector>  CSS selector of the element to check

Options:
      --headless  Hide browser window (visible by default)
  -v, --verbose   Enable debug logging
      --json      Output as JSON
  -h, --help      Print help

Examples:
  bl is enabled "button[type=submit]"
  # Prints true or false
