src/snapshots/bl__tests__snapshots__cmd_is__visible.snap
---
source: src/tests.rs
expression: render_command_help(&refs)
---
Check if an element is visible on the page

Usage: bl is visible [OPTIONS] <selector>

Arguments:
  <selector>  CSS selector of the element to check

Options:
      --headless  Hide browser window (visible by default)
  -v, --verbose   Enable debug logging
      --json      Output as JSON
  -h, --help      Print help

Examples:
  bl is visible "h1"
  # Prints true or false
